Update Blockchain.java